--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/bin/main.rs"
 clap = "2.33.0"
 futures = "0.1.27"
 log = "0.4.6"
+async-log = "1.0.4"
 env_logger = "0.6.1"
 actix-web = "1.0.2"
 actix-http = "0.2.4"
@@ -30,5 +31,6 @@ serde_derive = "1.0.92"
 serde_json = "1.0.39"
 url = "1.7.2"
 stopwatch = "0.0.7"
+hocon = "0.3.0"
 #validator = "0.8.0"
 #validator_derive = "0.8.0"
